# macbac

./: .gitignore  .traeignore  README.md  pyproject.toml  spec-prompt.md  spec-v3.md  spec-v4.md  spec.md
data/backup/macbac_backup_20250806_174531/: inventory.md
data/backup/macbac_backup_20250806_174531/configs/: .gitconfig
macbac/: __init__.py  backup.py  cli.py  restore.py  storage.py
macbac/scanners/: __init__.py  appstore_scanner.py  dev_env_scanner.py  font_scanner.py  homebrew_scanner.py  manual_app_scanner.py
ssh-backup-scripts/: backup_ssh_hosts.sh  restore_ssh_hosts.sh
test_backup/macbac_backup_20250806_172511/: inventory.md
test_backup/macbac_backup_20250806_172511/configs/: .bashrc  .zshrc  config
tests/: __init__.py  test_backup.py  test_restore.py
